fix: bizarre layout issue on macOS 26.2 + scroll to top of public key

--- a/src/routes/layout.css
+++ b/src/routes/layout.css
@@ -15,3 +15,7 @@
 button {
     cursor: pointer;
 }
+
+textarea {
+    word-break: break-all;
+}
